--- a/experiment_phone.html
+++ b/experiment_phone.html
@@ -239,8 +239,8 @@
             type: 'preload',
             video: VIDEO_SEQUENCE,               // 这里将来换成你60条视频的数组
             show_progress_bar: true,
-            message: '视频正在加载，请稍候……',
-            error_message: '部分视频加载失败，但实验仍将继续。',
+            message: 'Loading videos. Please wait…',
+            error_message: 'Some videos failed to load, but the study will continue.',
             continue_after_error: true,          // 万一某条加载失败，不整个卡死
             max_load_time: 60000                // 最长等 60 秒（10 分钟），可按需要调整
         };
